update openapi doc - remove domain responses and add dto instead
